# kpackage

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5PackageConfig.cmake.in  KF5PackageMacros.cmake  KF6PackageConfig.cmake.in  KF6PackageMacros.cmake  README.md  metainfo.yaml  qrc.cmake
autotests/: CMakeLists.txt  benchmarkstest.cpp  config.h.cmake  fallbackpackagetest.cpp  fallbackpackagetest.h  genericstructure.cpp  genericstructure.h  kpackagestructure_performance_test.cpp  kpackagetoolappstreamtest.cmake  packagemetadatatest.desktop  packagestructuretest.cpp  packagestructuretest.h  plasmoidpackagetest.cpp  plasmoidpackagetest.h  plasmoidstructure.cpp  plasmoidstructure.h  querytest.cpp  querytest.h  rccpackagetest.cpp  rccpackagetest.h
autotests/data/customcontent/: metadata.desktop  metadata.json
autotests/data/simplecontent/: metadata.desktop  metadata.json
autotests/data/testfallbackpackage/: metadata.desktop  metadata.json  testfallbackpackage.appdata.xml  testfallbackpackage.testappdataxml
autotests/data/testjsonmetadatapackage/: metadata.json  testjsonmetadatapackage.appdata.xml  testjsonmetadatapackage.testappdataxml
autotests/data/testpackage/: metadata.desktop  metadata.json  testpackage.appdata.xml  testpackage.testappdataxml
autotests/data/testpackage-nodisplay/: metadata.desktop  metadata.json
autotests/data/testpackage-rcc/: metadata.json  resources.qrc
autotests/data/testpackagesdep/: metadata.json  testpackagesdep.testappdataxml
autotests/data/testpackagesdepinvalid/: metadata.json  testpackagesdepinvalid.testappdataxml
autotests/data/testplasmathemepackagewithoutservicetypes/: metadata.desktop
autotests/mockdepresolver/: CMakeLists.txt  main.cpp
autotests/packagestructures/: plasmoidpackagestructure.json  plasmoidstructure.cpp  plasmoidstructure.h  plugin.cpp
docs/kpackagetool/: CMakeLists.txt  man-kpackagetool.1.docbook  man-kpackagetool5.1.docbook
po/ar/: libkpackage5.po  libkpackage6.po
po/ast/: libkpackage5.po  libkpackage6.po
po/az/: libkpackage5.po  libkpackage6.po
po/bg/: libkpackage6.po
po/bs/: libkpackage5.po  libkpackage6.po
po/ca/: libkpackage5.po  libkpackage6.po
po/ca/docs/kpackagetool/: man-kpackagetool5.1.docbook  man-kpackagetool6.1.docbook
po/ca@valencia/: libkpackage5.po  libkpackage6.po
po/ca@valencia/docs/kpackagetool/: man-kpackagetool5.1.docbook  man-kpackagetool6.1.docbook
po/cs/: libkpackage5.po  libkpackage6.po
po/da/: libkpackage5.po  libkpackage6.po
po/de/: libkpackage5.po  libkpackage6.po
po/de/docs/kpackagetool/: man-kpackagetool5.1.docbook
po/el/: libkpackage5.po  libkpackage6.po
po/en_GB/: libkpackage5.po  libkpackage6.po
po/eo/: libkpackage5.po  libkpackage6.po
po/es/: libkpackage5.po  libkpackage6.po
po/es/docs/kpackagetool/: man-kpackagetool5.1.docbook
po/et/: libkpackage5.po  libkpackage6.po
po/eu/: libkpackage5.po  libkpackage6.po
po/fi/: libkpackage5.po  libkpackage6.po
po/fr/: libkpackage5.po  libkpackage6.po
po/ga/: libkpackage5.po  libkpackage6.po
po/gd/: libkpackage5.po  libkpackage6.po
po/gl/: libkpackage5.po  libkpackage6.po
po/he/: libkpackage5.po  libkpackage6.po
po/hi/: libkpackage6.po
po/hu/: libkpackage5.po  libkpackage6.po
po/ia/: libkpackage5.po  libkpackage6.po
po/id/: libkpackage5.po  libkpackage6.po
po/it/: libkpackage5.po  libkpackage6.po
po/ja/: libkpackage5.po  libkpackage6.po
po/ka/: libkpackage5.po  libkpackage6.po
po/ko/: libkpackage5.po  libkpackage6.po
po/lt/: libkpackage5.po  libkpackage6.po
po/lv/: libkpackage6.po
po/ml/: libkpackage5.po  libkpackage6.po
po/mr/: libkpackage5.po  libkpackage6.po
po/nb/: libkpackage5.po  libkpackage6.po
po/nds/: libkpackage5.po  libkpackage6.po
po/nl/: libkpackage5.po  libkpackage6.po
po/nn/: libkpackage5.po  libkpackage6.po
po/pa/: libkpackage5.po  libkpackage6.po
po/pl/: libkpackage5.po  libkpackage6.po
po/pt/: libkpackage5.po  libkpackage6.po
po/pt_BR/: libkpackage5.po  libkpackage6.po
po/ro/: libkpackage5.po  libkpackage6.po
po/ru/: libkpackage5.po  libkpackage6.po
po/sa/: libkpackage6.po
po/sk/: libkpackage5.po  libkpackage6.po
po/sl/: libkpackage5.po  libkpackage6.po
po/sr/: libkpackage5.po  libkpackage6.po
po/sr@ijekavian/: libkpackage5.po  libkpackage6.po
po/sr@ijekavianlatin/: libkpackage5.po  libkpackage6.po
po/sr@latin/: libkpackage5.po  libkpackage6.po
po/sv/: libkpackage5.po  libkpackage6.po
po/ta/: libkpackage6.po
po/tg/: libkpackage5.po  libkpackage6.po
po/tr/: libkpackage5.po  libkpackage6.po
po/ug/: libkpackage5.po  libkpackage6.po
po/uk/: libkpackage5.po  libkpackage6.po
po/zh_CN/: libkpackage5.po  libkpackage6.po
po/zh_TW/: libkpackage5.po  libkpackage6.po
src/: CMakeLists.txt  Messages.sh
src/kpackage/: CMakeLists.txt  config-package.h.cmake  kpackage-index.qdoc  kpackage.qdoc  kpackage.qdocconf  kpackage.qrc  metainfo.yaml  package.cpp  package.h  packagejob.cpp  packagejob.h  packageloader.cpp  packageloader.h  packagestructure.cpp  packagestructure.h  packagestructure_compat_p.h  packagetrader.cpp  packagetrader.h  version.cpp  version.h
src/kpackage/data/kservicetypes5/: kpackage-generic.desktop  kpackage-genericqml.desktop  kpackage-packagestructure.desktop
src/kpackage/data/servicetypes/: kpackage-generic.desktop  kpackage-packagestructure.desktop
src/kpackage/private/: package_p.h  packagejob.cpp  packagejob_p.h  packagejobthread.cpp  packagejobthread_p.h  packageloader_p.h  packages.cpp  packages_p.h  utils.h  versionparser.cpp
src/kpackagetool/: CMakeLists.txt  kpackagetool.cpp  kpackagetool.h  main.cpp  options.h  plasmapkg.cpp
src/kpackagetool/completions/: kpackagetool6.zsh
src/lib/: CMakeLists.txt  packagestructure.h  packagetrader.h  version.cpp
src/plasma/: CMakeLists.txt  package.cpp  package.h  packagestructure.h  packagetrader.cpp  packagetrader.h  pluginloader.cpp  pluginloader.h  version.cpp  version.h
src/plasma/private/: package_p.h  packagejob.cpp  packagejobthread.cpp  packagejobthread_p.h
src/plasmapkg/: main.cpp  plasmapkg.cpp
(+15 files in other folders)
